linux (Qualcomm): update .config for 6.5

--- a/projects/Qualcomm/devices/Dragonboard/linux/linux.aarch64.conf
+++ b/projects/Qualcomm/devices/Dragonboard/linux/linux.aarch64.conf
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.4.8 Kernel Configuration
+# Linux/arm64 6.5.0-rc5 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-none-elf-gcc-13.2.0 (GCC) 13.2.0"
 CONFIG_CC_IS_GCC=y
@@ -243,6 +243,7 @@ CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_ARCH_HAS_MEMBARRIER_SYNC_CORE=y
 CONFIG_KCMP=y
 CONFIG_RSEQ=y
+CONFIG_CACHESTAT_SYSCALL=y
 # CONFIG_EMBEDDED is not set
 CONFIG_HAVE_PERF_EVENTS=y
 
@@ -305,6 +306,7 @@ CONFIG_BUILTIN_RETURN_ADDRESS_STRIPS_PAC=y
 # CONFIG_ARCH_MESON is not set
 # CONFIG_ARCH_MVEBU is not set
 # CONFIG_ARCH_NXP is not set
+# CONFIG_ARCH_MA35 is not set
 # CONFIG_ARCH_NPCM is not set
 CONFIG_ARCH_QCOM=y
 # CONFIG_ARCH_REALTEK is not set
@@ -312,6 +314,7 @@ CONFIG_ARCH_QCOM=y
 # CONFIG_ARCH_ROCKCHIP is not set
 # CONFIG_ARCH_SEATTLE is not set
 # CONFIG_ARCH_INTEL_SOCFPGA is not set
+# CONFIG_ARCH_STM32 is not set
 # CONFIG_ARCH_SYNQUACER is not set
 # CONFIG_ARCH_TEGRA is not set
 # CONFIG_ARCH_SPRD is not set
@@ -427,16 +430,16 @@ CONFIG_SETEND_EMULATION=y
 #
 # CONFIG_ARM64_HW_AFDBM is not set
 # CONFIG_ARM64_PAN is not set
-CONFIG_AS_HAS_LDAPR=y
-CONFIG_AS_HAS_LSE_ATOMICS=y
+# CONFIG_AS_HAS_LDAPR is not set
+# CONFIG_AS_HAS_LSE_ATOMICS is not set
 # CONFIG_ARM64_USE_LSE_ATOMICS is not set
 # end of ARMv8.1 architectural features
 
 #
 # ARMv8.2 architectural features
 #
-CONFIG_AS_HAS_ARMV8_2=y
-CONFIG_AS_HAS_SHA3=y
+# CONFIG_AS_HAS_ARMV8_2 is not set
+# CONFIG_AS_HAS_SHA3 is not set
 # CONFIG_ARM64_PMEM is not set
 # CONFIG_ARM64_RAS_EXTN is not set
 # CONFIG_ARM64_CNP is not set
@@ -446,28 +449,28 @@ CONFIG_AS_HAS_SHA3=y
 # ARMv8.3 architectural features
 #
 # CONFIG_ARM64_PTR_AUTH is not set
-CONFIG_CC_HAS_BRANCH_PROT_PAC_RET=y
-CONFIG_CC_HAS_SIGN_RETURN_ADDRESS=y
+# CONFIG_CC_HAS_BRANCH_PROT_PAC_RET is not set
+# CONFIG_CC_HAS_SIGN_RETURN_ADDRESS is not set
 # CONFIG_AS_HAS_ARMV8_3 is not set
-CONFIG_AS_HAS_CFI_NEGATE_RA_STATE=y
+# CONFIG_AS_HAS_CFI_NEGATE_RA_STATE is not set
 # end of ARMv8.3 architectural features
 
 #
 # ARMv8.4 architectural features
 #
 # CONFIG_ARM64_AMU_EXTN is not set
-CONFIG_AS_HAS_ARMV8_4=y
+# CONFIG_AS_HAS_ARMV8_4 is not set
 # CONFIG_ARM64_TLB_RANGE is not set
 # end of ARMv8.4 architectural features
 
 #
 # ARMv8.5 architectural features
 #
-CONFIG_AS_HAS_ARMV8_5=y
+# CONFIG_AS_HAS_ARMV8_5 is not set
 # CONFIG_ARM64_BTI is not set
-CONFIG_CC_HAS_BRANCH_PROT_PAC_RET_BTI=y
+# CONFIG_CC_HAS_BRANCH_PROT_PAC_RET_BTI is not set
 # CONFIG_ARM64_E0PD is not set
-CONFIG_ARM64_AS_HAS_MTE=y
+# CONFIG_ARM64_AS_HAS_MTE is not set
 # end of ARMv8.5 architectural features
 
 #
@@ -477,7 +480,6 @@ CONFIG_ARM64_AS_HAS_MTE=y
 
 CONFIG_ARM64_SVE=y
 CONFIG_ARM64_SME=y
-CONFIG_ARM64_MODULE_PLTS=y
 # CONFIG_ARM64_PSEUDO_NMI is not set
 CONFIG_RELOCATABLE=y
 # CONFIG_RANDOMIZE_BASE is not set
@@ -618,6 +620,8 @@ CONFIG_VIRTUALIZATION=y
 #
 CONFIG_CRASH_CORE=y
 CONFIG_KEXEC_CORE=y
+CONFIG_HOTPLUG_CORE_SYNC=y
+CONFIG_HOTPLUG_CORE_SYNC_DEAD=y
 # CONFIG_KPROBES is not set
 CONFIG_JUMP_LABEL=y
 # CONFIG_STATIC_KEYS_SELFTEST is not set
@@ -830,7 +834,7 @@ CONFIG_COREDUMP=y
 #
 # SLAB allocator options
 #
-# CONFIG_SLAB is not set
+# CONFIG_SLAB_DEPRECATED is not set
 CONFIG_SLUB=y
 CONFIG_SLAB_MERGE_DEFAULT=y
 # CONFIG_SLAB_FREELIST_RANDOM is not set
@@ -2744,7 +2748,6 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_IMAGIS is not set
 # CONFIG_TOUCHSCREEN_IMX6UL_TSC is not set
 # CONFIG_TOUCHSCREEN_INEXIO is not set
-# CONFIG_TOUCHSCREEN_MK712 is not set
 # CONFIG_TOUCHSCREEN_PENMOUNT is not set
 # CONFIG_TOUCHSCREEN_EDT_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_TOUCHRIGHT is not set
@@ -3156,6 +3159,7 @@ CONFIG_PINCTRL_SINGLE=y
 # CONFIG_PINCTRL_STMFX is not set
 # CONFIG_PINCTRL_SX150X is not set
 CONFIG_PINCTRL_MSM=y
+# CONFIG_PINCTRL_IPQ5018 is not set
 # CONFIG_PINCTRL_IPQ5332 is not set
 CONFIG_PINCTRL_IPQ8074=y
 # CONFIG_PINCTRL_IPQ6018 is not set
@@ -3170,8 +3174,6 @@ CONFIG_PINCTRL_MSM8996=y
 # CONFIG_PINCTRL_QCM2290 is not set
 # CONFIG_PINCTRL_QCS404 is not set
 CONFIG_PINCTRL_QDF2XXX=y
-CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
-CONFIG_PINCTRL_QCOM_SSBI_PMIC=y
 # CONFIG_PINCTRL_QDU1000 is not set
 # CONFIG_PINCTRL_SA8775P is not set
 # CONFIG_PINCTRL_SC7180 is not set
@@ -3181,6 +3183,7 @@ CONFIG_PINCTRL_QCOM_SSBI_PMIC=y
 # CONFIG_PINCTRL_SDM660 is not set
 # CONFIG_PINCTRL_SDM670 is not set
 # CONFIG_PINCTRL_SDM845 is not set
+# CONFIG_PINCTRL_SDX75 is not set
 # CONFIG_PINCTRL_SM6115 is not set
 # CONFIG_PINCTRL_SM6125 is not set
 # CONFIG_PINCTRL_SM6350 is not set
@@ -3191,6 +3194,8 @@ CONFIG_PINCTRL_QCOM_SSBI_PMIC=y
 # CONFIG_PINCTRL_SM8350 is not set
 # CONFIG_PINCTRL_SM8450 is not set
 # CONFIG_PINCTRL_SM8550 is not set
+CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
+CONFIG_PINCTRL_QCOM_SSBI_PMIC=y
 # CONFIG_PINCTRL_LPASS_LPI is not set
 
 #
@@ -3350,6 +3355,7 @@ CONFIG_BATTERY_BQ27XXX_I2C=y
 # CONFIG_CHARGER_UCS1002 is not set
 # CONFIG_CHARGER_BD99954 is not set
 # CONFIG_BATTERY_UG3105 is not set
+# CONFIG_CHARGER_QCOM_SMB2 is not set
 # CONFIG_HWMON is not set
 CONFIG_THERMAL=y
 # CONFIG_THERMAL_NETLINK is not set
@@ -3400,6 +3406,7 @@ CONFIG_WATCHDOG_OPEN_TIMEOUT=0
 # CONFIG_GPIO_WATCHDOG is not set
 # CONFIG_WDAT_WDT is not set
 # CONFIG_XILINX_WATCHDOG is not set
+# CONFIG_XILINX_WINDOW_WATCHDOG is not set
 # CONFIG_ZIIRAVE_WATCHDOG is not set
 # CONFIG_ARM_SP805_WATCHDOG is not set
 # CONFIG_ARM_SBSA_WATCHDOG is not set
@@ -3447,7 +3454,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_BD9571MWV is not set
 # CONFIG_MFD_AXP20X_I2C is not set
 # CONFIG_MFD_MADERA is not set
-# CONFIG_MFD_MAX597X is not set
+# CONFIG_MFD_MAX5970 is not set
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_MFD_DA9052_SPI is not set
 # CONFIG_MFD_DA9052_I2C is not set
@@ -3471,6 +3478,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_88PM805 is not set
 # CONFIG_MFD_88PM860X is not set
 # CONFIG_MFD_MAX14577 is not set
+# CONFIG_MFD_MAX77541 is not set
 CONFIG_MFD_MAX77620=y
 # CONFIG_MFD_MAX77650 is not set
 # CONFIG_MFD_MAX77686 is not set
@@ -3500,7 +3508,8 @@ CONFIG_MFD_SPMI_PMIC=y
 # CONFIG_MFD_RT5033 is not set
 # CONFIG_MFD_RT5120 is not set
 # CONFIG_MFD_RC5T583 is not set
-# CONFIG_MFD_RK808 is not set
+# CONFIG_MFD_RK8XX_I2C is not set
+# CONFIG_MFD_RK8XX_SPI is not set
 # CONFIG_MFD_RN5T618 is not set
 CONFIG_MFD_SEC_CORE=y
 # CONFIG_MFD_SI476X_CORE is not set
@@ -3527,6 +3536,8 @@ CONFIG_MFD_SYSCON=y
 # CONFIG_MFD_TPS65910 is not set
 # CONFIG_MFD_TPS65912_I2C is not set
 # CONFIG_MFD_TPS65912_SPI is not set
+# CONFIG_MFD_TPS6594_I2C is not set
+# CONFIG_MFD_TPS6594_SPI is not set
 # CONFIG_TWL4030_CORE is not set
 # CONFIG_TWL6040_CORE is not set
 # CONFIG_MFD_WL1273_CORE is not set
@@ -3604,6 +3615,7 @@ CONFIG_REGULATOR_PWM=y
 CONFIG_REGULATOR_QCOM_SMD_RPM=y
 CONFIG_REGULATOR_QCOM_SPMI=y
 # CONFIG_REGULATOR_QCOM_USB_VBUS is not set
+# CONFIG_REGULATOR_RAA215300 is not set
 # CONFIG_REGULATOR_RASPBERRYPI_TOUCHSCREEN_ATTINY is not set
 # CONFIG_REGULATOR_RT4801 is not set
 # CONFIG_REGULATOR_RT4803 is not set
@@ -3626,6 +3638,7 @@ CONFIG_REGULATOR_S2MPS11=y
 # CONFIG_REGULATOR_TPS51632 is not set
 # CONFIG_REGULATOR_TPS62360 is not set
 # CONFIG_REGULATOR_TPS6286X is not set
+# CONFIG_REGULATOR_TPS6287X is not set
 # CONFIG_REGULATOR_TPS65023 is not set
 # CONFIG_REGULATOR_TPS6507X is not set
 # CONFIG_REGULATOR_TPS65132 is not set
@@ -3810,6 +3823,7 @@ CONFIG_VIDEO_IR_I2C=y
 # CONFIG_VIDEO_MT9V032 is not set
 # CONFIG_VIDEO_MT9V111 is not set
 # CONFIG_VIDEO_OG01A1B is not set
+# CONFIG_VIDEO_OV01A10 is not set
 # CONFIG_VIDEO_OV02A10 is not set
 # CONFIG_VIDEO_OV08D10 is not set
 # CONFIG_VIDEO_OV08X40 is not set
@@ -4103,6 +4117,7 @@ CONFIG_DRM_PANEL_EDP=y
 # CONFIG_DRM_PANEL_SAMSUNG_DB7430 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6D16D0 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6D27A1 is not set
+# CONFIG_DRM_PANEL_SAMSUNG_S6D7AA0 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6E3HA2 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6E63J0X03 is not set
 # CONFIG_DRM_PANEL_SAMSUNG_S6E63M0 is not set
@@ -4222,6 +4237,8 @@ CONFIG_FB_SYS_IMAGEBLIT=y
 # CONFIG_FB_FOREIGN_ENDIAN is not set
 CONFIG_FB_SYS_FOPS=y
 CONFIG_FB_DEFERRED_IO=y
+CONFIG_FB_SYS_HELPERS=y
+CONFIG_FB_SYS_HELPERS_DEFERRED=y
 CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_TILEBLITTING is not set
 
@@ -4334,6 +4351,7 @@ CONFIG_SND_CTL_FAST_LOOKUP=y
 CONFIG_SND_DRIVERS=y
 # CONFIG_SND_DUMMY is not set
 # CONFIG_SND_ALOOP is not set
+# CONFIG_SND_PCMTEST is not set
 # CONFIG_SND_MTPAV is not set
 # CONFIG_SND_SERIAL_U16550 is not set
 # CONFIG_SND_MPU401 is not set
@@ -4412,6 +4430,7 @@ CONFIG_SND_HDA_PREALLOC_SIZE=64
 CONFIG_SND_SPI=y
 CONFIG_SND_USB=y
 CONFIG_SND_USB_AUDIO=y
+# CONFIG_SND_USB_AUDIO_MIDI_V2 is not set
 CONFIG_SND_USB_AUDIO_USE_MEDIA_CONTROLLER=y
 # CONFIG_SND_USB_UA101 is not set
 # CONFIG_SND_USB_CAIAQ is not set
@@ -4449,6 +4468,7 @@ CONFIG_SND_SOC=y
 # CONFIG_SND_SOC_IMX_AUDMUX is not set
 # end of SoC Audio for Freescale CPUs
 
+# CONFIG_SND_SOC_CHV3_I2S is not set
 # CONFIG_SND_I2S_HI6210_I2S is not set
 # CONFIG_SND_SOC_IMG is not set
 # CONFIG_SND_SOC_MTK_BTCVSD is not set
@@ -4495,6 +4515,7 @@ CONFIG_SND_SOC_AK4613=y
 # CONFIG_SND_SOC_AW88395 is not set
 # CONFIG_SND_SOC_BD28623 is not set
 # CONFIG_SND_SOC_BT_SCO is not set
+# CONFIG_SND_SOC_CHV3_CODEC is not set
 # CONFIG_SND_SOC_CS35L32 is not set
 # CONFIG_SND_SOC_CS35L33 is not set
 # CONFIG_SND_SOC_CS35L34 is not set
@@ -4545,6 +4566,7 @@ CONFIG_SND_SOC_HDMI_CODEC=y
 # CONFIG_SND_SOC_MAX98927 is not set
 # CONFIG_SND_SOC_MAX98520 is not set
 # CONFIG_SND_SOC_MAX98373_I2C is not set
+# CONFIG_SND_SOC_MAX98388 is not set
 # CONFIG_SND_SOC_MAX98390 is not set
 # CONFIG_SND_SOC_MAX98396 is not set
 # CONFIG_SND_SOC_MAX9860 is not set
@@ -4580,6 +4602,7 @@ CONFIG_SND_SOC_MSM8916_WCD_DIGITAL=y
 # CONFIG_SND_SOC_SSM2518 is not set
 # CONFIG_SND_SOC_SSM2602_SPI is not set
 # CONFIG_SND_SOC_SSM2602_I2C is not set
+# CONFIG_SND_SOC_SSM3515 is not set
 # CONFIG_SND_SOC_SSM4567 is not set
 # CONFIG_SND_SOC_STA32X is not set
 # CONFIG_SND_SOC_STA350 is not set
@@ -4589,6 +4612,7 @@ CONFIG_SND_SOC_MSM8916_WCD_DIGITAL=y
 # CONFIG_SND_SOC_TAS2764 is not set
 # CONFIG_SND_SOC_TAS2770 is not set
 # CONFIG_SND_SOC_TAS2780 is not set
+# CONFIG_SND_SOC_TAS2781_I2C is not set
 # CONFIG_SND_SOC_TAS5086 is not set
 # CONFIG_SND_SOC_TAS571X is not set
 # CONFIG_SND_SOC_TAS5720 is not set
@@ -4738,6 +4762,7 @@ CONFIG_HID_NINTENDO=m
 CONFIG_NINTENDO_FF=y
 # CONFIG_HID_NTI is not set
 # CONFIG_HID_NTRIG is not set
+# CONFIG_HID_NVIDIA_SHIELD is not set
 # CONFIG_HID_ORTEK is not set
 CONFIG_HID_OUYA=y
 # CONFIG_HID_PANTHERLORD is not set
@@ -5060,6 +5085,7 @@ CONFIG_USB_SNP_UDC_PLAT=y
 # CONFIG_USB_EG20T is not set
 # CONFIG_USB_GADGET_XILINX is not set
 # CONFIG_USB_MAX3420_UDC is not set
+# CONFIG_USB_CDNS2_UDC is not set
 # CONFIG_USB_DUMMY_HCD is not set
 # end of USB Peripheral Controller
 
@@ -5189,6 +5215,7 @@ CONFIG_LEDS_CLASS=y
 # LED drivers
 #
 # CONFIG_LEDS_AN30259A is not set
+# CONFIG_LEDS_AW200XX is not set
 # CONFIG_LEDS_AW2013 is not set
 # CONFIG_LEDS_BCM6328 is not set
 # CONFIG_LEDS_BCM6358 is not set
@@ -5227,7 +5254,7 @@ CONFIG_LEDS_SYSCON=y
 # CONFIG_LEDS_MLXREG is not set
 # CONFIG_LEDS_USER is not set
 # CONFIG_LEDS_SPI_BYTE is not set
-# CONFIG_LEDS_TI_LMU_COMMON is not set
+# CONFIG_LEDS_LM3697 is not set
 
 #
 # Flash and Torch LED drivers
@@ -5444,11 +5471,23 @@ CONFIG_VFIO_CONTAINER=y
 CONFIG_VFIO_IOMMU_TYPE1=y
 # CONFIG_VFIO_NOIOMMU is not set
 CONFIG_VFIO_VIRQFD=y
+
+#
+# VFIO support for PCI devices
+#
 CONFIG_VFIO_PCI_CORE=y
 CONFIG_VFIO_PCI_MMAP=y
 CONFIG_VFIO_PCI_INTX=y
 CONFIG_VFIO_PCI=y
+# end of VFIO support for PCI devices
+
+#
+# VFIO support for platform devices
+#
 # CONFIG_VFIO_PLATFORM is not set
+# CONFIG_VFIO_AMBA is not set
+# end of VFIO support for platform devices
+
 # CONFIG_VIRT_DRIVERS is not set
 CONFIG_VIRTIO_ANCHOR=y
 CONFIG_VIRTIO=y
@@ -5549,30 +5588,16 @@ CONFIG_QCOM_A53PLL=y
 # CONFIG_QCOM_A7PLL is not set
 # CONFIG_QCOM_CLK_APCC_MSM8996 is not set
 CONFIG_QCOM_CLK_SMD_RPM=y
-CONFIG_APQ_GCC_8084=y
-CONFIG_APQ_MMCC_8084=y
 # CONFIG_IPQ_APSS_PLL is not set
 CONFIG_IPQ_GCC_4019=y
 # CONFIG_IPQ_GCC_5332 is not set
 # CONFIG_IPQ_GCC_6018 is not set
-CONFIG_IPQ_GCC_806X=y
-CONFIG_IPQ_LCC_806X=y
 CONFIG_IPQ_GCC_8074=y
 # CONFIG_IPQ_GCC_9574 is not set
-CONFIG_MSM_GCC_8660=y
-# CONFIG_MSM_GCC_8909 is not set
 CONFIG_MSM_GCC_8916=y
 # CONFIG_MSM_GCC_8917 is not set
 # CONFIG_MSM_GCC_8939 is not set
-CONFIG_MSM_GCC_8960=y
-CONFIG_MSM_LCC_8960=y
-# CONFIG_MDM_GCC_9607 is not set
-CONFIG_MDM_GCC_9615=y
-CONFIG_MDM_LCC_9615=y
-CONFIG_MSM_MMCC_8960=y
 # CONFIG_MSM_GCC_8953 is not set
-CONFIG_MSM_GCC_8974=y
-CONFIG_MSM_MMCC_8974=y
 # CONFIG_MSM_GCC_8976 is not set
 # CONFIG_MSM_MMCC_8994 is not set
 CONFIG_MSM_GCC_8994=y
@@ -5599,6 +5624,7 @@ CONFIG_MSM_MMCC_8996=y
 # CONFIG_SC_GPUCC_7280 is not set
 # CONFIG_SC_GPUCC_8280XP is not set
 # CONFIG_SC_LPASSCC_7280 is not set
+# CONFIG_SC_LPASSCC_8280XP is not set
 # CONFIG_SC_LPASS_CORECC_7180 is not set
 # CONFIG_SC_LPASS_CORECC_7280 is not set
 # CONFIG_SC_MSS_7180 is not set
@@ -5616,8 +5642,7 @@ CONFIG_MSM_MMCC_8996=y
 # CONFIG_SDM_VIDEOCC_845 is not set
 # CONFIG_SDM_DISPCC_845 is not set
 # CONFIG_SDM_LPASSCC_845 is not set
-# CONFIG_SDX_GCC_55 is not set
-# CONFIG_SDX_GCC_65 is not set
+# CONFIG_SDX_GCC_75 is not set
 # CONFIG_SM_CAMCC_6350 is not set
 # CONFIG_SM_CAMCC_8250 is not set
 # CONFIG_SM_CAMCC_8450 is not set
@@ -5638,13 +5663,18 @@ CONFIG_MSM_MMCC_8996=y
 # CONFIG_SM_GPUCC_8150 is not set
 # CONFIG_SM_GPUCC_8250 is not set
 # CONFIG_SM_GPUCC_8350 is not set
+# CONFIG_SM_GPUCC_8450 is not set
+# CONFIG_SM_GPUCC_8550 is not set
 # CONFIG_SM_TCSRCC_8550 is not set
 # CONFIG_SM_VIDEOCC_8150 is not set
 # CONFIG_SM_VIDEOCC_8250 is not set
+# CONFIG_SM_VIDEOCC_8350 is not set
+# CONFIG_SM_VIDEOCC_8550 is not set
 # CONFIG_SPMI_PMIC_CLKDIV is not set
 # CONFIG_QCOM_HFPLL is not set
 # CONFIG_KPSS_XCC is not set
 # CONFIG_CLK_GFM_LPASS_SM8250 is not set
+# CONFIG_SM_VIDEOCC_8450 is not set
 # CONFIG_XILINX_VCU is not set
 # CONFIG_COMMON_CLK_XLNX_CLKWZRD is not set
 CONFIG_HWSPINLOCK=y
@@ -5788,6 +5818,7 @@ CONFIG_QCOM_MDT_LOADER=y
 # CONFIG_QCOM_OCMEM is not set
 # CONFIG_QCOM_RAMP_CTRL is not set
 # CONFIG_QCOM_RMTFS_MEM is not set
+# CONFIG_QCOM_RPM_MASTER_STATS is not set
 # CONFIG_QCOM_RPMH is not set
 # CONFIG_QCOM_RPMPD is not set
 CONFIG_QCOM_SMEM=y
@@ -6198,6 +6229,7 @@ CONFIG_IIO=y
 # CONFIG_SENSORS_ISL29028 is not set
 # CONFIG_ISL29125 is not set
 # CONFIG_JSA1212 is not set
+# CONFIG_ROHM_BU27008 is not set
 # CONFIG_ROHM_BU27034 is not set
 # CONFIG_RPR0521 is not set
 # CONFIG_LTR501 is not set
@@ -6207,6 +6239,7 @@ CONFIG_IIO=y
 # CONFIG_MAX44009 is not set
 # CONFIG_NOA1305 is not set
 # CONFIG_OPT3001 is not set
+# CONFIG_OPT4001 is not set
 # CONFIG_PA12203001 is not set
 # CONFIG_SI1133 is not set
 # CONFIG_SI1145 is not set
@@ -6277,6 +6310,7 @@ CONFIG_IIO=y
 # CONFIG_MCP4531 is not set
 # CONFIG_MCP41010 is not set
 # CONFIG_TPL0102 is not set
+# CONFIG_X9250 is not set
 # end of Digital potentiometers
 
 #
@@ -6297,6 +6331,7 @@ CONFIG_IIO=y
 # CONFIG_MPL115_I2C is not set
 # CONFIG_MPL115_SPI is not set
 # CONFIG_MPL3115 is not set
+# CONFIG_MPRLS0025PA is not set
 # CONFIG_MS5611 is not set
 # CONFIG_MS5637 is not set
 # CONFIG_IIO_ST_PRESS is not set
@@ -6432,6 +6467,7 @@ CONFIG_PHY_QCOM_USB_HSIC=y
 # CONFIG_PHY_QCOM_USB_HS_28NM is not set
 # CONFIG_PHY_QCOM_USB_SS is not set
 # CONFIG_PHY_QCOM_IPQ806X_USB is not set
+# CONFIG_PHY_QCOM_SGMII_ETH is not set
 CONFIG_PHY_SAMSUNG_USB2=y
 # CONFIG_PHY_TUSB1210 is not set
 # end of PHY Subsystem
@@ -6774,7 +6810,6 @@ CONFIG_SECURITY=y
 CONFIG_SECURITYFS=y
 # CONFIG_SECURITY_NETWORK is not set
 # CONFIG_SECURITY_PATH is not set
-CONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR=y
 # CONFIG_HARDENED_USERCOPY is not set
 # CONFIG_FORTIFY_SOURCE is not set
 # CONFIG_STATIC_USERMODEHELPER is not set
@@ -6833,6 +6868,7 @@ CONFIG_CRYPTO_ALGAPI=y
 CONFIG_CRYPTO_ALGAPI2=y
 CONFIG_CRYPTO_AEAD=y
 CONFIG_CRYPTO_AEAD2=y
+CONFIG_CRYPTO_SIG2=y
 CONFIG_CRYPTO_SKCIPHER=y
 CONFIG_CRYPTO_SKCIPHER2=y
 CONFIG_CRYPTO_HASH=y
@@ -6921,6 +6957,7 @@ CONFIG_CRYPTO_NHPOLY1305=y
 # CONFIG_CRYPTO_CHACHA20POLY1305 is not set
 CONFIG_CRYPTO_CCM=y
 CONFIG_CRYPTO_GCM=y
+CONFIG_CRYPTO_GENIV=y
 CONFIG_CRYPTO_SEQIV=y
 CONFIG_CRYPTO_ECHAINIV=y
 # CONFIG_CRYPTO_ESSIV is not set
@@ -6942,7 +6979,7 @@ CONFIG_CRYPTO_POLYVAL=y
 CONFIG_CRYPTO_SHA1=y
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA512=y
-# CONFIG_CRYPTO_SHA3 is not set
+CONFIG_CRYPTO_SHA3=y
 CONFIG_CRYPTO_SM3=y
 # CONFIG_CRYPTO_SM3_GENERIC is not set
 # CONFIG_CRYPTO_STREEBOG is not set
@@ -6982,6 +7019,7 @@ CONFIG_CRYPTO_DRBG_HMAC=y
 # CONFIG_CRYPTO_DRBG_CTR is not set
 CONFIG_CRYPTO_DRBG=y
 CONFIG_CRYPTO_JITTERENTROPY=y
+# CONFIG_CRYPTO_JITTERENTROPY_TESTINTERFACE is not set
 CONFIG_CRYPTO_KDF800108_CTR=y
 # end of Random number generation
 
@@ -7170,6 +7208,7 @@ CONFIG_HAS_IOPORT=y
 CONFIG_HAS_IOPORT_MAP=y
 CONFIG_HAS_DMA=y
 CONFIG_DMA_OPS=y
+CONFIG_NEED_SG_DMA_FLAGS=y
 CONFIG_NEED_SG_DMA_LENGTH=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_ARCH_DMA_ADDR_T_64BIT=y
@@ -7180,6 +7219,7 @@ CONFIG_ARCH_HAS_SYNC_DMA_FOR_DEVICE=y
 CONFIG_ARCH_HAS_SYNC_DMA_FOR_CPU=y
 CONFIG_ARCH_HAS_DMA_PREP_COHERENT=y
 CONFIG_SWIOTLB=y
+CONFIG_DMA_BOUNCE_UNALIGNED_KMALLOC=y
 # CONFIG_DMA_RESTRICTED_POOL is not set
 CONFIG_DMA_NONCOHERENT_MMAP=y
 CONFIG_DMA_COHERENT_POOL=y
@@ -7350,10 +7390,13 @@ CONFIG_HAVE_ARCH_KFENCE=y
 CONFIG_PANIC_ON_OOPS_VALUE=0
 CONFIG_PANIC_TIMEOUT=0
 # CONFIG_SOFTLOCKUP_DETECTOR is not set
+CONFIG_HAVE_HARDLOCKUP_DETECTOR_BUDDY=y
+# CONFIG_HARDLOCKUP_DETECTOR is not set
 CONFIG_DETECT_HUNG_TASK=y
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
 # CONFIG_BOOTPARAM_HUNG_TASK_PANIC is not set
 # CONFIG_WQ_WATCHDOG is not set
+# CONFIG_WQ_CPU_INTENSIVE_REPORT is not set
 # CONFIG_TEST_LOCKUP is not set
 # end of Debug Oops, Lockups and Hangs
 
@@ -7424,6 +7467,7 @@ CONFIG_RCU_EXP_CPU_STALL_TIMEOUT=0
 # CONFIG_LATENCYTOP is not set
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
+CONFIG_HAVE_FUNCTION_GRAPH_RETVAL=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
 CONFIG_HAVE_DYNAMIC_FTRACE_WITH_ARGS=y
 CONFIG_HAVE_FTRACE_MCOUNT_RECORD=y
@@ -7432,6 +7476,8 @@ CONFIG_HAVE_C_RECORDMCOUNT=y
 CONFIG_TRACING_SUPPORT=y
 # CONFIG_FTRACE is not set
 # CONFIG_SAMPLES is not set
+CONFIG_HAVE_SAMPLE_FTRACE_DIRECT=y
+CONFIG_HAVE_SAMPLE_FTRACE_DIRECT_MULTI=y
 # CONFIG_STRICT_DEVMEM is not set
 
 #
@@ -7455,6 +7501,7 @@ CONFIG_CORESIGHT_SOURCE_ETM4X=y
 # CONFIG_ULTRASOC_SMB is not set
 # CONFIG_CORESIGHT_TPDM is not set
 # CONFIG_CORESIGHT_TPDA is not set
+# CONFIG_CORESIGHT_DUMMY is not set
 # end of arm64 Debugging
 
 #
