u-boot-Khadas_VIM4: bump package to be24ec37 Add multiDTB support

--- a/projects/Amlogic-ce/devices/Amlogic-ne/bootloader/dtb.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/bootloader/dtb.conf
@@ -18,4 +18,8 @@
     <file>t7_a311d2_beelink_gt_king_ii_4g.dtb</file>
     <file>t7_a311d2_beelink_gt_king_ii_8g.dtb</file>
   </multidtb>
+  <multidtb name="t7_a311d2_khadas_vim4.dtb" subdevice="">
+    <file>t7_a311d2_khadas_vim4.dtb</file>
+    <file>t7c_a311d2_khadas_vim4n.dtb</file>
+  </multidtb>
 </dtb>
