linux (NXP iMX8): update .config for 6.4.8

--- a/projects/NXP/devices/iMX8/linux/linux.aarch64.conf
+++ b/projects/NXP/devices/iMX8/linux/linux.aarch64.conf
@@ -1,16 +1,18 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.4.0-rc4 Kernel Configuration
+# Linux/arm64 6.4.8 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="aarch64-none-elf-gcc-13.1.0 (GCC) 13.1.0"
+CONFIG_CC_VERSION_TEXT="aarch64-libreelec-linux-gnu-gcc-13.2.0 (GCC) 13.2.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=130100
+CONFIG_GCC_VERSION=130200
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
-CONFIG_AS_VERSION=24000
+CONFIG_AS_VERSION=24100
 CONFIG_LD_IS_BFD=y
-CONFIG_LD_VERSION=24000
+CONFIG_LD_VERSION=24100
 CONFIG_LLD_VERSION=0
+CONFIG_CC_CAN_LINK=y
+CONFIG_CC_CAN_LINK_STATIC=y
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
 CONFIG_CC_HAS_ASM_GOTO_TIED_OUTPUT=y
 CONFIG_CC_HAS_ASM_INLINE=y
@@ -324,6 +326,7 @@ CONFIG_ARCH_MXC=y
 #
 # ARM errata workarounds via the alternatives framework
 #
+# CONFIG_AMPERE_ERRATUM_AC03_CPU_38 is not set
 CONFIG_ARM64_WORKAROUND_CLEAN_CACHE=y
 CONFIG_ARM64_ERRATUM_826319=y
 CONFIG_ARM64_ERRATUM_827319=y
@@ -909,6 +912,7 @@ CONFIG_SECRETMEM=y
 # CONFIG_LRU_GEN is not set
 CONFIG_ARCH_SUPPORTS_PER_VMA_LOCK=y
 CONFIG_PER_VMA_LOCK=y
+CONFIG_LOCK_MM_AND_FIND_VMA=y
 
 #
 # Data Access Monitoring
