Amlogic-ce: enable CONFIG_DYNAMIC_DEBUG

--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -2,9 +2,9 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 5.4.210 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="aarch64-libreelec-linux-gnu-gcc-13.1.0 (GCC) 13.1.0"
+CONFIG_CC_VERSION_TEXT="aarch64-libreelec-linux-gnu-gcc-12.2.0 (GCC) 12.2.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=130100
+CONFIG_GCC_VERSION=120200
 CONFIG_CLANG_VERSION=0
 CONFIG_LLD_VERSION=0
 CONFIG_CC_CAN_LINK=y
@@ -6235,7 +6235,6 @@ CONFIG_AMLOGIC_LED=y
 # CONFIG_AMLOGIC_LEDS_STATE is not set
 CONFIG_AMLOGIC_LEDS_BCT3236=y
 # CONFIG_AMLOGIC_LEDRING is not set
-CONFIG_AMLOGIC_LEDS_BCT3236=y
 
 #
 # Audio Interface
@@ -6969,8 +6968,8 @@ CONFIG_CONSOLE_LOGLEVEL_DEFAULT=7
 CONFIG_CONSOLE_LOGLEVEL_QUIET=4
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 # CONFIG_BOOT_PRINTK_DELAY is not set
-# CONFIG_DYNAMIC_DEBUG is not set
-# CONFIG_DYNAMIC_DEBUG_CORE is not set
+CONFIG_DYNAMIC_DEBUG=y
+CONFIG_DYNAMIC_DEBUG_CORE=y
 # end of printk and dmesg options
 
 #
