--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -4845,7 +4845,7 @@ CONFIG_LEDS_PWM=y
 # CONFIG_LEDS_REGULATOR is not set
 # CONFIG_LEDS_BD2802 is not set
 # CONFIG_LEDS_LT3593 is not set
-# CONFIG_LEDS_TCA6507 is not set
+CONFIG_LEDS_TCA6507=m
 # CONFIG_LEDS_TLC591XX is not set
 # CONFIG_LEDS_LM355x is not set
 # CONFIG_LEDS_KTD2692 is not set
