--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -2127,7 +2127,6 @@ CONFIG_NET_VENDOR_STMICRO=y
 CONFIG_STMMAC_ETH=y
 # CONFIG_STMMAC_SELFTESTS is not set
 CONFIG_STMMAC_PLATFORM=y
-CONFIG_STMMAC_JL2XX1=y
 CONFIG_DWMAC_DWC_QOS_ETH=y
 # CONFIG_DWMAC_GENERIC is not set
 CONFIG_DWMAC_MESON=y
@@ -2156,6 +2155,7 @@ CONFIG_MDIO_BUS_MUX_MESON_G12A=y
 # CONFIG_MDIO_THUNDER is not set
 CONFIG_PHYLINK=y
 CONFIG_PHYLIB=y
+CONFIG_JLSEMI_PHY=y
 CONFIG_SWPHY=y
 CONFIG_LED_TRIGGER_PHY=y
 
