Amlogic-ne: fix linux config PCI bus

--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -1437,6 +1437,7 @@ CONFIG_PCI_QUIRKS=y
 # Cadence PCIe controllers support
 #
 # CONFIG_PCIE_CADENCE_HOST is not set
+# CONFIG_PCIE_CADENCE_EP is not set
 # end of Cadence PCIe controllers support
 
 # CONFIG_PCI_FTPCI100 is not set
@@ -1454,6 +1455,7 @@ CONFIG_PCIE_DW=y
 CONFIG_PCIE_DW_HOST=y
 CONFIG_PCIE_DW_PLAT=y
 CONFIG_PCIE_DW_PLAT_HOST=y
+# CONFIG_PCIE_DW_PLAT_EP is not set
 # CONFIG_PCI_HISI is not set
 # CONFIG_PCIE_KIRIN is not set
 # CONFIG_PCI_MESON is not set
@@ -1464,7 +1466,9 @@ CONFIG_PCIE_DW_PLAT_HOST=y
 #
 # PCI Endpoint
 #
-# CONFIG_PCI_ENDPOINT is not set
+CONFIG_PCI_ENDPOINT=y
+# CONFIG_PCI_ENDPOINT_CONFIGFS is not set
+# CONFIG_PCI_EPF_TEST is not set
 # end of PCI Endpoint
 
 #
@@ -6112,8 +6116,8 @@ CONFIG_AMLOGIC_MEDIA_VPP=y
 # end of Amlogic multimedia configuration
 
 CONFIG_AMLOGIC_PCIE=y
-# CONFIG_AMLOGIC_PCIE_RC is not set
-# CONFIG_AMLOGIC_PCIE_V3 is not set
+CONFIG_AMLOGIC_PCIE_RC=y
+CONFIG_AMLOGIC_PCIE_V3=y
 
 #
 # Amlogic Thermal and Cooling devices
@@ -6212,7 +6216,7 @@ CONFIG_AMLOGIC_STACKPROTECTOR=y
 # CONFIG_AMLOGIC_WATCHPOINT is not set
 # CONFIG_AMLOGIC_MEM_DEBUG is not set
 # CONFIG_AMLOGIC_PIN_LOCKED_FILE is not set
-# CONFIG_AMLOGIC_PCIE_DMA_OPS is not set
+CONFIG_AMLOGIC_PCIE_DMA_OPS=y
 CONFIG_AMLOGIC_BT_DEVICE=y
 CONFIG_AMLOGIC_BT_WAKE_NOT_REPORT=y
 CONFIG_AMLOGIC_WIFI=y
