--- a/packages/addons/service/docker/source/system.d/service.system.docker.service
+++ b/packages/addons/service/docker/source/system.d/service.system.docker.service
@@ -4,7 +4,7 @@ Documentation=https://docs.docker.com
 After=network.target
 
 [Service]
-Type=idle
+Type=notify
 Environment=PATH=/bin:/sbin:/usr/bin:/usr/sbin:/storage/.kodi/addons/service.system.docker/bin
 ExecStartPre=/storage/.kodi/addons/service.system.docker/bin/docker-config
 EnvironmentFile=-/storage/.kodi/userdata/addon_data/service.system.docker/config/docker.conf
@@ -22,5 +22,5 @@ TimeoutStartSec=0
 Restart=on-abnormal
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=kodi.target
 Alias=docker.service
