--- a/projects/RPi/devices/RPi5/linux/linux.aarch64.conf
+++ b/projects/RPi/devices/RPi5/linux/linux.aarch64.conf
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.1.54 Kernel Configuration
+# Linux/arm64 6.1.57 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-linux-gnu-gcc (GCC) 13.0.0 20220604 (experimental) [master revision aec868578d8515763d75693c1fdfbc30ff0a1e68]"
 CONFIG_CC_IS_GCC=y
@@ -359,6 +359,7 @@ CONFIG_ARM64_ERRATUM_2054223=y
 CONFIG_ARM64_ERRATUM_2067961=y
 CONFIG_ARM64_ERRATUM_2441009=y
 CONFIG_ARM64_ERRATUM_2457168=y
+CONFIG_ARM64_ERRATUM_2966298=y
 CONFIG_CAVIUM_ERRATUM_22375=y
 CONFIG_CAVIUM_ERRATUM_23154=y
 CONFIG_CAVIUM_ERRATUM_27456=y
@@ -1331,8 +1332,6 @@ CONFIG_NET_CLS=y
 # CONFIG_NET_CLS_ROUTE4 is not set
 # CONFIG_NET_CLS_FW is not set
 # CONFIG_NET_CLS_U32 is not set
-# CONFIG_NET_CLS_RSVP is not set
-# CONFIG_NET_CLS_RSVP6 is not set
 # CONFIG_NET_CLS_FLOW is not set
 CONFIG_NET_CLS_CGROUP=m
 # CONFIG_NET_CLS_BPF is not set
@@ -4023,6 +4022,7 @@ CONFIG_VIDEO_CAMERA_SENSOR=y
 # CONFIG_VIDEO_IMX335 is not set
 # CONFIG_VIDEO_IMX355 is not set
 # CONFIG_VIDEO_IMX412 is not set
+# CONFIG_VIDEO_IMX477 is not set
 # CONFIG_VIDEO_IMX519 is not set
 # CONFIG_VIDEO_IMX708 is not set
 # CONFIG_VIDEO_MT9M001 is not set
@@ -4113,7 +4113,6 @@ CONFIG_VIDEO_MSP3400=m
 # CONFIG_VIDEO_TLV320AIC23B is not set
 # CONFIG_VIDEO_TVAUDIO is not set
 # CONFIG_VIDEO_UDA1342 is not set
-# CONFIG_VIDEO_IMX477 is not set
 # CONFIG_VIDEO_VP27SMPX is not set
 # CONFIG_VIDEO_WM8739 is not set
 CONFIG_VIDEO_WM8775=m
