linux: add CONFIG_ options for netfilter limit and log
enable -j LOG and -m limit in iptables consistently for all .config
- https://cateee.net/lkddb/web-lkddb/NETFILTER_XT_TARGET_LOG.html
- https://cateee.net/lkddb/web-lkddb/NETFILTER_XT_MATCH_LIMIT.html

--- a/projects/Rockchip/devices/RK3328/linux/default/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3328/linux/default/linux.aarch64.conf
@@ -1135,7 +1135,7 @@ CONFIG_NETFILTER_XT_MATCH_CONNTRACK=m
 CONFIG_NETFILTER_XT_MATCH_IPVS=m
 # CONFIG_NETFILTER_XT_MATCH_L2TP is not set
 # CONFIG_NETFILTER_XT_MATCH_LENGTH is not set
-# CONFIG_NETFILTER_XT_MATCH_LIMIT is not set
+CONFIG_NETFILTER_XT_MATCH_LIMIT=m
 # CONFIG_NETFILTER_XT_MATCH_MAC is not set
 # CONFIG_NETFILTER_XT_MATCH_MARK is not set
 # CONFIG_NETFILTER_XT_MATCH_MULTIPORT is not set
