Amlogic-no: migrate DT from older project

--- a/projects/Amlogic-ce/devices/Amlogic-no/bootloader/dtb.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-no/bootloader/dtb.conf
@@ -46,4 +46,36 @@
     <file>t7_a311d2_khadas_vim4.dtb</file>
     <file>t7c_a311d2_khadas_vim4n.dtb</file>
   </multidtb>
+
+  <!--migrate DT from older project-->
+  <migratedtb coreelec-dt-id="g12b_s922x_beelink_gt_king_rev_a" subdevice="">
+    <migratedtid>g12b_s922x_beelink_gt_king</migratedtid>
+  </migratedtb>
+  <migratedtb coreelec-dt-id="g12b_s922x_beelink_gs_king_x_rev_a" subdevice="">
+    <migratedtid>g12b_s922x_beelink_gs_king_x</migratedtid>
+  </migratedtb>
+  <migratedtb coreelec-dt-id="g12b_s922x_minix_u22xj" subdevice="">
+    <migratedtid>g12b_s922x_minix_u22xj_max</migratedtid>
+  </migratedtb>
+  <migratedtb coreelec-dt-id="g12b_s922x_minix_u22xj_max_rev_a" subdevice="">
+    <migratedtid>g12b_s922x_minix_u22xj_max</migratedtid>
+  </migratedtb>
+  <migratedtb coreelec-dt-id="g12b_s922x_odroid_n2plus" subdevice="">
+    <migratedtid>g12b_s922x_odroid_n2</migratedtid>
+  </migratedtb>
+  <migratedtb coreelec-dt-id="g12b_s922x_odroid_n2plus_rev_c" subdevice="">
+    <migratedtid>g12b_s922x_odroid_n2</migratedtid>
+  </migratedtb>
+  <migratedtb coreelec-dt-id="g12b_s922x_ugoos_am6_rev_a_2g" subdevice="">
+    <migratedtid>g12b_s922x_ugoos_am6_2g</migratedtid>
+  </migratedtb>
+  <migratedtb coreelec-dt-id="g12b_s922x_ugoos_am6_rev_a_4g" subdevice="">
+    <migratedtid>g12b_s922x_ugoos_am6_4g</migratedtid>
+  </migratedtb>
+  <migratedtb coreelec-dt-id="g12b_s922x_ugoos_am6b_rev_a_2g" subdevice="">
+    <migratedtid>g12b_s922x_ugoos_am6b_2g</migratedtid>
+  </migratedtb>
+  <migratedtb coreelec-dt-id="g12b_s922x_ugoos_am6b_rev_a_4g" subdevice="">
+    <migratedtid>g12b_s922x_ugoos_am6b_4g</migratedtid>
+  </migratedtb>
 </dtb>
