linux (Rockchip RK3399): make consistent V4L2_MEM2MEM_DEV and V4L2_FLASH_LED_CLASS

--- a/projects/Rockchip/devices/RK3399/linux/default/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3399/linux/default/linux.aarch64.conf
@@ -3790,7 +3790,7 @@ CONFIG_VIDEO_TUNER=m
 CONFIG_V4L2_H264=m
 CONFIG_V4L2_VP9=m
 CONFIG_V4L2_MEM2MEM_DEV=m
-CONFIG_V4L2_FLASH_LED_CLASS=m
+# CONFIG_V4L2_FLASH_LED_CLASS is not set
 CONFIG_V4L2_FWNODE=y
 CONFIG_V4L2_ASYNC=y
 # end of Video4Linux options
@@ -5743,6 +5743,9 @@ CONFIG_LEDS_SYSCON=y
 #
 # RGB LED drivers
 #
+# CONFIG_LEDS_GROUP_MULTICOLOR is not set
+# CONFIG_LEDS_PWM_MULTICOLOR is not set
+# CONFIG_LEDS_QCOM_LPG is not set
 
 #
 # LED Triggers
