--- a/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
@@ -3752,6 +3752,7 @@ CONFIG_DVB_USB_AZ6027=m
 CONFIG_DVB_USB_TECHNISAT_USB2=m
 CONFIG_DVB_USB_TBS5520SE=m
 CONFIG_DVB_USB_TBS5580=m
+CONFIG_DVB_USB_TBS5930=m
 CONFIG_DVB_USB_V2=m
 CONFIG_DVB_USB_AF9015=m
 CONFIG_DVB_USB_AF9035=m
@@ -4029,6 +4030,7 @@ CONFIG_DVB_RTL2832=m
 CONFIG_DVB_SI2168=m
 CONFIG_DVB_AS102_FE=m
 CONFIG_DVB_ZD1301_DEMOD=m
+CONFIG_DVB_M88RS6060=m
 CONFIG_DVB_GP8PSK_FE=m
 
 #
