Amlogic-ne: config: add TBS 5230,5530,5930,5931

--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -3529,6 +3529,10 @@ CONFIG_DVB_USB_AZ6027=m
 CONFIG_DVB_USB_TECHNISAT_USB2=m
 CONFIG_DVB_USB_TBS5520SE=m
 CONFIG_DVB_USB_TBS5580=m
+CONFIG_DVB_USB_TBS5930=m
+CONFIG_DVB_USB_TBS5530=m
+CONFIG_DVB_USB_TBS5230=m
+CONFIG_DVB_USB_TBS5931=m
 CONFIG_DVB_USB_V2=m
 CONFIG_DVB_USB_AF9015=m
 CONFIG_DVB_USB_AF9035=m
@@ -3728,6 +3732,8 @@ CONFIG_DVB_STB0899=m
 CONFIG_DVB_STB6100=m
 CONFIG_DVB_STV090x=m
 CONFIG_DVB_STV6110x=m
+CONFIG_DVB_TAS2101=m
+CONFIG_DVB_GX1133=m
 CONFIG_DVB_M88DS3103=m
 
 #
@@ -3786,8 +3792,10 @@ CONFIG_DVB_CXD2841ER=m
 CONFIG_DVB_RTL2830=m
 CONFIG_DVB_RTL2832=m
 CONFIG_DVB_SI2168=m
+CONFIG_DVB_CXD2878=m
 CONFIG_DVB_AS102_FE=m
 CONFIG_DVB_ZD1301_DEMOD=m
+CONFIG_DVB_M88RS6060=m
 CONFIG_DVB_GP8PSK_FE=m
 
 #
