Amlogic-no: enable System V IPC in linux config
fixes some Sundtek tuners

dmesg
mediasrv[1073]: unhandled exception: 11 DABT (lower EL), ESR 0x92000044, level 1 translation fault in libc.so.6[7f8d200000+168000]

strace
shmget(0x8a6d32, 5820416, IPC_CREAT|0666) = -1 ENOSYS (Function not implemented)

/var/log/mediaclient.log
2023-12-30 15:06:44 [1326] semaphore error:
2023-12-30 15:06:44 [1326] semaphore not allocated

--- a/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
@@ -33,7 +33,8 @@ CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_INIT=""
 CONFIG_DEFAULT_HOSTNAME="@DISTRONAME@"
 CONFIG_SWAP=y
-# CONFIG_SYSVIPC is not set
+CONFIG_SYSVIPC=y
+CONFIG_SYSVIPC_SYSCTL=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_POSIX_MQUEUE_SYSCTL=y
 CONFIG_WATCH_QUEUE=y
@@ -496,6 +497,8 @@ CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
 # end of Boot options
+
+CONFIG_SYSVIPC_COMPAT=y
 
 #
 # Power management options
