linux (RPi): config options for 6.6.9-ea98b21
Signed-off-by: Matthias Reichl <hias@horus.com>

--- a/projects/RPi/devices/RPi4/linux/linux.aarch64.conf
+++ b/projects/RPi/devices/RPi4/linux/linux.aarch64.conf
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.6.5 Kernel Configuration
+# Linux/arm64 6.6.9 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-linux-gnu-gcc (GCC) 13.0.0 20220604 (experimental) [master revision aec868578d8515763d75693c1fdfbc30ff0a1e68]"
 CONFIG_CC_IS_GCC=y
@@ -254,6 +254,7 @@ CONFIG_TRACEPOINTS=y
 # Kexec and crash features
 #
 # CONFIG_KEXEC_FILE is not set
+# CONFIG_CRASH_DUMP is not set
 # end of Kexec and crash features
 # end of General setup
 
@@ -5724,6 +5725,8 @@ CONFIG_LEDS_GPIO=y
 #
 # RGB LED drivers
 #
+# CONFIG_LEDS_GROUP_MULTICOLOR is not set
+# CONFIG_LEDS_PWM_MULTICOLOR is not set
 
 #
 # LED Triggers
@@ -7141,8 +7144,6 @@ CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_NOTIFIERS is not set
 # CONFIG_DEBUG_MAPLE_TREE is not set
 # end of Debug kernel data structures
-
-# CONFIG_DEBUG_CREDENTIALS is not set
 
 #
 # RCU Debugging
