linux (RPi): config options for 6.6.13-20e7693
Signed-off-by: Matthias Reichl <hias@horus.com>

--- a/projects/RPi/devices/RPi/linux/linux.arm.conf
+++ b/projects/RPi/devices/RPi/linux/linux.arm.conf
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 6.6.9 Kernel Configuration
+# Linux/arm 6.6.13 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="arm-linux-gnueabihf-gcc (GCC) 13.0.0 20220604 (experimental) [master revision aec868578d8515763d75693c1fdfbc30ff0a1e68]"
 CONFIG_CC_IS_GCC=y
@@ -4684,7 +4684,7 @@ CONFIG_MMC_SDHCI_PLTFM=y
 # CONFIG_MMC_USDHI6ROL0 is not set
 CONFIG_MMC_REALTEK_USB=m
 # CONFIG_MMC_CQHCI is not set
-# CONFIG_MMC_HSQ is not set
+CONFIG_MMC_HSQ=y
 # CONFIG_MMC_BCM2835 is not set
 # CONFIG_MMC_MTK is not set
 # CONFIG_MMC_SDHCI_XENON is not set
